# neurovrai

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CLEANUP_PLAN.md  DEPENDENCIES.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PROJECT_PLAN.md  PROJECT_STATUS.md  R01_Methods_Revised.md  R01_Neuroimaging_Methods.md  R01_Neuroimaging_Methods_Brief.md  README.md  SESSION_REPORT_2025-11-13.md  TESTING_RESULTS.md  TODO_EFFECT_SIZE_TESTING.md  asl_params.yaml  batch_func_only.sh  batch_func_preprocess.py  batch_functional_cluster_analysis.py  check_tbss_progress.sh  compare_new_vs_old.sh  config.yaml  crash-20251209-100328-edm9fd-bandpass_filter-05ca9dc8-0148-4729-a161-d11dcfc36a23.pklz  crash-20251209-101418-edm9fd-bandpass_filter-cb7dfa4b-af02-405f-973d-cdd95838faa8.pklz  crash-20251209-103137-edm9fd-bandpass_filter-359606ea-7f6c-4a87-b74c-8cb8f75e5e72.pklz  crash-20251215-092257-edm9fd-brain_extraction-ba5f1997-4449-4c62-b95a-5e8c9ff84bcb.pklz  crash-20251215-094441-edm9fd-ica_aroma-4d48c967-1366-4048-a83f-f1012d5db806.pklz  crash-20251215-101458-edm9fd-ica_aroma-af05c35a-2bef-4d46-81ad-77abddafd73d.pklz  create_config.py  dwi_metrics_visualization.html  generate_design_matrices.py  irl-template-analysis.md  irl-template-preprocessing.md  normalize_func_metrics_to_mni.py  process_missing_subjects.sh  pyproject.toml  regenerate_all_designs.sh  (+26 more)
.github/workflows/: ci.yml
anat/: anat-preproc.py  freesurfer.py  freesurfer_data_prep.py  vbm_randomise.py
anat/.ipynb_checkpoints/: create_subject_list-checkpoint.ipynb  freesurfer_stats-checkpoint.ipynb
archive/analysis/: cluster_analysis.py
archive/anat/: create_subject_list.ipynb  freesurfer.py  freesurfer_stats.ipynb  sort_vbm_files.py  vbm_design_matrix.py
archive/dicom/: bids.py
archive/dwi/: sort_nonFA_dti_files.py  tbss_randomise.py
archive/myelin/: myelin_post_prep.py  myelin_tract_extraction.py
archive/rest/: mean_me_rest.py  melodic.py  rest_singleTE_workflow.py
archive/runners/: run_all_subjects.py  run_full_pipeline.py  run_preprocessing.py
archive/scripts/: compare_design_matrices.py  fix_reho_falff_designs.py  generate_design_matrices.py  run_batch_simple.py
archive/tests/: create_dwi_visualization.py  find_anat_data.py  generate_func_reports.py  identify_atropos_tissues.py  inspect_asl_dicom.py  main.py  mask_and_recompute_func_metrics.py  process_missing_subjects_fixed.sh  standardize_atropos_tissues.py  test_activeax_only.py  test_amico_models.py  (+23 more)
configs/: config.yaml  default.yaml  example_study.yaml
docs/: DIRECTORY_STRUCTURE.md  DKI_METRICS.md  DOCUMENTATION_INDEX.md  DUAL_REGRESSION_USAGE.md  DWI_PROCESSING_GUIDE.md  DWI_QC_SPECIFICATION.md  DWI_ROADMAP.md  FUNCTIONAL_PREPROCESSING_ISSUES.md  FUNCTIONAL_PREPROCESSING_RESOLVED.md  FUTURE_ENHANCEMENTS.md  GLM_USAGE.md  MODALITY_AWARE_DESIGN_GENERATION.md  NEUROVRAI_ARCHITECTURE.md  PLANNED_ANALYSES.md  README.md  ROADMAP_2025-12.md  SESSION_SUMMARY_2025-12-05_PART3.md  cli.md  configuration.md  skull_strip_qc_usage.md  workflows.md
dwi/: dti-preprocess.py  dti_singleShell_preprocess.py  dti_tract_extraction.py  tbss_design_matrix.py  tbss_sort_files.py  warp_nonFA_to_MNI.py
examples/: 01_basic_preprocessing.py  02_full_pipeline.py  03_batch_processing.py  README.md  README_TEST_ENVIRONMENT.md  connectome_complete_workflow.py  example.py  neuroaider_example.py  run_dwi_with_topup.py
mri_preprocess/: cli.py  config.py  config_generator.py
myelin/: myelin_workflow.py
neuroaider/: README.md  __init__.py  design_helper.py  validators.py
neurovrai/: __init__.py  config.py  study_initialization.py
plans/: main-plan-activity.md  main-plan-log.csv  main-plan.md
rest/: rest-preproc-dev.py  rest_corrmat_generation.py  rest_design_matrix.py  rest_dualregress.py  rest_workflow.py
scripts/: archive_old_func_outputs.sh  identify_old_func_outputs.sh  init_study.py  migrate_bedpostx_to_derivatives.py  migrate_transforms.py  normalize_bold_to_mni.py  normalize_existing_func_data.py  run_melodic_irc805.py  run_reho_falff_analysis.py  run_vbm_irc805.py  test_harvard_oxford.py  verify_new_func_output.sh  wmh_group_comparison.py  wmh_visualization.py
(+213 files in other folders)
