[project]
name = "human-mri-preprocess"
version = "0.1.0"
description = "MRI preprocessing pipeline with multi-echo fMRI (TEDANA), diffusion tractography, and config-driven workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "dipy>=1.11.0",
    "heudiconv>=1.3.4",
    "nibabel>=5.3.2",
    "nipype>=1.10.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0",
    "pydicom>=3.0.1",
    "pyyaml>=6.0",
    "scipy>=1.14",
    "spyder-kernels>=3.1.0",
    "tedana>=25.0.1",
]

[project.scripts]
mri-preprocess = "mri_preprocess.cli:main"
