[project]
name = "human-mri-preprocess"
version = "0.1.0"
description = "MRI preprocessing pipeline with multi-echo fMRI (TEDANA), diffusion tractography, and config-driven workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "dipy>=1.11.0",
    "dmri-amico>=2.0.3",  # AMICO for fast microstructure modeling
    "heudiconv>=1.3.4",
    "matplotlib>=3.5.0",  # For QC plots
    "nibabel>=5.3.2",
    "nilearn>=0.10.0,<0.11",  # For TEDANA compatibility
    "nipype>=1.10.0",
    "numpy>=1.24,<3.0",
    "packaging>=20.0",  # For version comparisons in QC/verification
    "pandas>=2.0",
    "pydicom>=3.0.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.0",  # For ACompCor and QC
    "scipy>=1.14",
    "seaborn>=0.12.0",  # For QC visualizations
    "spyder-kernels>=3.1.0",
    "tedana>=25.0.1",
]

[project.scripts]
mri-preprocess = "mri_preprocess.cli:main"
