[project]
name = "neurovrai"
version = "0.2.0"
description = "Comprehensive MRI preprocessing, analysis, and connectivity package: from raw DICOM to group statistics and network neuroscience"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "dipy>=1.11.0",
    "dmri-amico>=2.0.3",  # AMICO for fast microstructure modeling
    "heudiconv>=1.3.4",
    "matplotlib>=3.5.0",  # For QC plots
    "neuroaider @ git+https://github.com/alexedmon1/neuroaider.git",  # Design matrix helper
    "nibabel>=5.3.2",
    "nilearn>=0.10.0,<0.11",  # For TEDANA compatibility
    "nipype>=1.10.0",
    "numpy>=1.24,<3.0",
    "packaging>=20.0",  # For version comparisons in QC/verification
    "pandas>=2.0",
    "pydicom>=3.0.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.0",  # For ACompCor and QC
    "scipy>=1.14",
    "seaborn>=0.12.0",  # For QC visualizations
    "spyder-kernels>=3.1.0",
    "tedana>=25.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
neurovrai = "neurovrai.preprocess.cli:main"

[project.urls]
Repository = "https://github.com/alexedmon1/neurovrai"
Issues = "https://github.com/alexedmon1/neurovrai/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neurovrai*"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "regression: behavior-preservation tests comparing a candidate implementation against frozen golden outputs (part of the gate)",
]
